Prevent packets from having dangerously sized collections
Copied near-verbatim from #110